--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,30 +1,26 @@
-/* .dashboard-container {
-  font-family: 'Inter', sans-serif;
-  background-color: white;
-  color: #1C1C1C;
-  display: grid;
-  grid-template-columns: 250px 1fr 250px;
-  height: 100vh;
-}
-
-.main-content {
-  display: flex;
-  flex-direction: column;
-}
- */
 
 /* Light Mode (Default) */
 :root {
   --bg-color: white;
-  --text-color: #1C1C1C;
+  --black100: #1C1C1C;
   --header-bg: #f8f9fa;
+  --dark-opacity: rgba(28, 28, 28, 0.05);
+  --black10: rgba(28, 28, 28, 0.1);
+  --primary-light: #F7F9FB;
+  --primary-blue: #E3F5FF;
+  --primary-purple: #E5ECF6;
 }
 
 /* Dark Mode */
 [data-theme="dark"] {
   --bg-color: #1C1C1C;
-  --text-color: white;
+  --black100: #FFFFFF;
   --header-bg: #292b2c;
+  --dark-opacity: rgba(255, 255, 255, 0.1);
+  --black10: rgba(255, 255, 255, 0.1);
+  --primary-light: rgba(255, 255, 255, 0.05);
+  --primary-blue: #E3F5FF;
+  --primary-purple: #E5ECF6;
 }
 
 .dashboard-container {
@@ -35,7 +31,3 @@
   grid-template-columns: 250px 1fr 250px;
   height: 100vh;
 }
-/* 
-.header {
-  background-color: var(--header-bg) !important;
-} */
