--- a/src/components/dashboardComponents/Header.css
+++ b/src/components/dashboardComponents/Header.css
@@ -1,43 +1,53 @@
 .header {
-  background-color: var(--Primary-Light, white);
   padding: 10px 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--black10);
 }
 
 .toolbar {
   display: flex;
   width: 100%;
+  max-width: 1200px;
   justify-content: space-between;
   align-items: center;
 }
 
+/* Left Side */
 .left {
   display: flex;
   align-items: center;
-  gap: 10px;
-}
-
-.breadcrumb {
+  gap: 12px;
   font-size: 14px;
 }
 
+/* Search Box */
 .search-box {
   display: flex;
   align-items: center;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 5px 10px;
+  background-color: var(--dark-opacity);
+  border-radius: 20px;
+  padding: 5px 15px;
+  width: 160px;
+}
+
+.search-icon {
+  color: #888;
+  font-size: 18px;
 }
 
 .search-input {
   border: none;
   outline: none;
   font-size: 14px;
+  background: none;
+  color: #888;
+  margin-left: 8px;
+  width: 100%;
 }
 
+/* Right Side */
 .right {
   display: flex;
   align-items: center;
