--- a/src/components/dashboardComponents/sidebar/SideBar.css
+++ b/src/components/dashboardComponents/sidebar/SideBar.css
@@ -1,4 +1,3 @@
-/* Light Mode (Default) */
 :root {
   --sidebar-bg: white;
   --sidebar-text: #555;
@@ -6,9 +5,8 @@
   --sidebar-active: #f5f5f5;
 }
 
-/* Dark Mode */
 [data-theme="dark"] {
-  --sidebar-bg: #1C1C1C;
+  --sidebar-bg: #1c1c1c;
   --sidebar-text: white;
   --sidebar-hover: lightgray;
   --sidebar-active: #333;
@@ -63,6 +61,30 @@
   gap: 8px;
   color: var(--sidebar-text);
   transition: 0.3s;
+  position: relative;
+}
+
+.menu li.has-submenu {
+  display: block;
+}
+
+.menu-item {
+  display: flex;
+  align-items: center;
+  gap: 4px; /* Reduce gap between arrow and text */
+  padding-left: 10px;
+}
+
+.menu-item-content {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+}
+
+.menu-item-content .arrow {
+  transition: transform 0.3s;
+  font-size: 0.9em;
 }
 
 .menu li:hover {
@@ -77,7 +99,7 @@
 
 .submenu {
   list-style: none;
-  padding-left: 20px;
+  padding-left: 46px;
   margin-top: 5px;
 }
 
@@ -85,8 +107,19 @@
   font-size: 14px;
   color: gray;
   padding: 5px 0;
+  display: flex;
+  align-items: center;
 }
 
 .submenu li:hover {
   color: var(--sidebar-hover);
+}
+
+.menu li > svg {
+  margin-right: 8px;
+}
+
+.small-arrow {
+  font-size: 0.8em;
+  color: gray;
 }
