--- a/src/components/dashboardComponents/sidebar/SideBar.css
+++ b/src/components/dashboardComponents/sidebar/SideBar.css
@@ -1,23 +1,7 @@
-:root {
-  --sidebar-bg: white;
-  --sidebar-text: #555;
-  --sidebar-hover: black;
-  --sidebar-active: #f5f5f5;
-}
-
-[data-theme="dark"] {
-  --sidebar-bg: #1c1c1c;
-  --sidebar-text: white;
-  --sidebar-hover: lightgray;
-  --sidebar-active: #333;
-}
-
 .sidebar {
-  width: 250px;
-  height: 100vh;
-  background: var(--sidebar-bg);
-  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  width: 212px;
+  padding: 20px 16px;
+  border-right: 1px solid var(--black10);
   overflow-y: auto;
 }
 
@@ -60,7 +44,6 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  color: var(--sidebar-text);
   transition: 0.3s;
   position: relative;
 }
@@ -108,12 +91,12 @@
 }
 
 .menu li:hover {
-  color: var(--sidebar-hover);
+  color: var(--black40);
 }
 
 /* Active item (Default) styling */
 .active {
-  background: var(--sidebar-active);
+  background: var(--dark-opacity);
   border-radius: 10px;
   font-weight: bold;
 }
@@ -132,7 +115,7 @@
   top: 5px;
   bottom: 5px;
   width: 4px;
-  background: var(--sidebar-hover);
+  background: var(--primary-brand);
   border-radius: 10px; /* Rounded corners on both left and right sides */
 }
 
@@ -158,5 +141,5 @@
 }
 
 .submenu li:hover {
-  color: var(--sidebar-hover);
+  color: var(--primary-brand);
 }
